# M2_acoustic-fingerprints-in-nature-implementation

./: .env  README.md  pyproject.toml  requirements.txt
src/preprocessing/: audio_to_spectrogram.py  fetch_sound_wasabi.py
src/visualize attention/: Visualize_self_attention_of_DINO.ipynb
